--- a/client/style.css
+++ b/client/style.css
@@ -1,1 +1,11 @@
 /* CSS declarations go here */
+#map-canvas {
+    width: 100%;
+    height: 500px;
+    margin: 10px 0;
+}
+
+img
+{
+    max-width: none;
+}
